
	* Add ThirdPartyToolbox/Isomap.m, ThirdPartyToolbox/IsomapII.m

	- Add modified code from Josh Tenenbaum, to compute Isomap
	embedding using an advanced version of the algorithm in Tenenbaum,
	de Silva, and Langford (2000), which can take advantage of
	sparsity in the graph and redundancy in the distances.

	* CardiacToolbox/scinrrd_valve_surface.m: v0.1

	- Rewrite the function to be able to use different methods to
	compute the interpolation domain, use different interpolants and
	the factor for the interpolation domain size.

	- Correct the way the interpolation is computed for the PCA
	method. I was rotating the horizontal domain, interpolation and
	rotating back, but this is incorrect because it does not give you
	the same point.

2011-03-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/dmatrix.m: v3.0

	- Fix copyright notice to be uniform with the rest of Gerardus.

	- Add input argument METHOD to select other distances than
	Euclidean.

	* Add PointsToolbox/plot_dmatrix.m

	- PLOT_DMATRIX Plot the connections implied by a distance matrix.

2011-02-24  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_save.m

	- Rename the input argument nrrd to scirunnrrd so that we don't
	need to duplicate the memory.

	- Add output argument nrrd to give the reformatted data volume
	actually saved.

	- Undo last change. The flag -v7.3 is not necessary, and prevents
	Seg3D from loading the segmentations. I think the problem was that
	if Matlab runs out of memory while trying to save the NRRD volume,
	it gives the flag -v7.3 error.

2011-02-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

 	* FileFormatToolbox/scinrrd_save.m

	- Force saving with flag -v7.3 to avoid warning message.

2011-02-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/pts_tps_map.m v6.4

	- Remove whitespace before or after bracket.

	- Fix bug. A bad testing condition prevented the computation of